[workspace]
members = [
    "day01_part1", 
    "day01_part2", 
    "day02_part1", 
    "day02_part2", 
    "day03_part1", 
    "day03_part2", 
    "day04_part1", 
    "day04_part2",
    "day05_part1",
    "day05_part2", 
    "day06_part1", 
    "day06_part2", 
    "day07_part1", 
    "day07_part2", 
    "day08_part1", 
    "day08_part2",
    "day09_part1", 
    "day09_part2",
    "day10_part1",
    "day10_part2",
    "day11_part1",
    "day11_part2"]
