[workspace]
members = [
    "day01_part1", 
    "day01_part2", 
    "day02_part1", 
    "day02_part2", 
    "day03_part1", 
    "day03_part2", 
    "day04_part1", 
    "day04_part2",
    "day05_part1",
    "day05_part2", 
    "day06_part1", 
    "day06_part2", 
    "day07_part1", 
    "day07_part2", 
    "day08_part1", 
    "day08_part2",
    "day09_part1", 
    "day09_part2",
    "day10_part1",
    "day10_part2",
    "day11_part1",
    "day11_part2", 
    "day12_part1", 
    "day12_part2",
    "day13_part1",
    "day13_part2",
    "day14_part1",
    "day14_part2", 
    "day15_part1", 
    "day15_part2", 
    "day16_part1", 
    "day16_part2", 
    "day17_part1", 
    "day17_part2", 
    "day18_part1", 
    "day18_part2", 
    "day19_part1", 
    "day19_part2"
      , "day20_part1"
      , "day20_part2", "day21_part1", "day21_part2", "day22_part1", "day22_part2", "day23_part1", "day23_part2", "day24_part1"]
